deploy/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: oms
  labels:
    name: oms
    environment: production
    app: order-management-system
